# obs_win-processaudio

./: CMakeLists.txt  audiosource.c  audiosource.cpp  audiosource.hpp  injector.cpp  injector.hpp  plugin-main.c  shared.h
.github/workflows/: package.yml
audiohook/: CMakeLists.txt  audio-hook.cpp
data/locale/: en-US.ini
